--- a/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/pagoproveedor/rptLiqObservacion.jrxml
+++ b/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/pagoproveedor/rptLiqObservacion.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptLiqObservacion" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="171a817f-2b9f-4ccc-a5f4-0babf9a17c2e">
-	<property name="ireport.zoom" value="1.771561000000001"/>
-	<property name="ireport.x" value="31"/>
-	<property name="ireport.y" value="379"/>
+	<property name="ireport.zoom" value="1.2100000000000006"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="132"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -54,6 +54,7 @@ from (select
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="ubicacionImagenes" class="java.lang.String"/>
+	<parameter name="pNombreCanton" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT
 	rai.DESCRIPCION_RUBRO ,
@@ -92,7 +93,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 	<title>
 		<band height="100" splitType="Stretch">
 			<textField>
-				<reportElement x="21" y="64" width="517" height="20" uuid="89cdf7d9-b4cd-401c-bd26-f41f45eede8d"/>
+				<reportElement uuid="89cdf7d9-b4cd-401c-bd26-f41f45eede8d" x="21" y="64" width="517" height="20"/>
 				<textElement textAlignment="Center" markup="none">
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
@@ -100,22 +101,22 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 "ENTREGA DE BIENES DEL PROGRAMA DOTACIÓN DE PAQUETES ESCOLARES"]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="20" y="20" width="90" height="57" uuid="4d2786d2-81ce-42bf-bf87-ab28b38ba62c"/>
+				<reportElement uuid="4d2786d2-81ce-42bf-bf87-ab28b38ba62c" x="20" y="20" width="90" height="57"/>
 				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="137" splitType="Stretch">
+		<band height="148" splitType="Stretch">
 			<staticText>
-				<reportElement x="21" y="122" width="517" height="15" uuid="f80acd18-74f6-4643-9d1c-3e8c7dbf460b"/>
+				<reportElement uuid="f80acd18-74f6-4643-9d1c-3e8c7dbf460b" x="21" y="132" width="517" height="15"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INCONSISTENCIAS ENCONTRADAS]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="21" y="0" width="517" height="118" uuid="6814b3fc-771d-4401-af06-671e477bc093"/>
+				<reportElement uuid="6814b3fc-771d-4401-af06-671e477bc093" x="21" y="0" width="517" height="130"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 					<paragraph lineSpacing="1_1_2"/>
@@ -128,14 +129,16 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 "CÓDIGO DEL CENTRO EDUCATIVO: "+$F{CODIGO_ENTIDAD}+"\n"+
 "DIRECCIÓN: "+$F{DIRECCION}+"\n"+
 "DEPARTAMENTO: "+$F{NOMBRE_DEPARTAMENTO}+"\n"+
-"MUNICIPIO: "+$F{NOMBRE_MUNICIPIO}]]></textFieldExpression>
+"MUNICIPIO: "+$F{NOMBRE_MUNICIPIO}+"\n"+
+"CANTÓN: "+$P{pNombreCanton}+"\n"+
+"CASERÍO: _________________________"]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="50" splitType="Stretch">
 			<componentElement>
-				<reportElement key="table" style="table_TD" x="41" y="0" width="360" height="50" uuid="5243a334-4f4c-4478-b336-09945f76d7c4"/>
+				<reportElement uuid="5243a334-4f4c-4478-b336-09945f76d7c4" key="table" style="table_TD" x="41" y="0" width="360" height="50"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsDatos" uuid="5952fcad-4b37-4ddb-aab2-bfddf006f157">
 						<datasetParameter name="id_liquidacion">
@@ -146,7 +149,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 					<jr:column width="29" uuid="0ba1f817-4bf9-4d0d-b407-15f79003c666">
 						<jr:columnHeader style="table_TD" height="13" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="29" height="13" uuid="71fd677f-ef71-4a2f-b4c8-ced2dd0c9af5"/>
+								<reportElement uuid="71fd677f-ef71-4a2f-b4c8-ced2dd0c9af5" x="0" y="0" width="29" height="13"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -155,7 +158,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="12" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="29" height="12" uuid="3a5e2215-0266-4503-9bf0-e143e349708b"/>
+								<reportElement uuid="3a5e2215-0266-4503-9bf0-e143e349708b" x="0" y="0" width="29" height="12"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -166,7 +169,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 					<jr:column width="330" uuid="b6b4820f-1378-4318-aad8-a6a4079f9c49">
 						<jr:columnHeader style="table_TD" height="13" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="330" height="13" uuid="4d19ef28-7aea-4991-932d-513f1a89c75f"/>
+								<reportElement uuid="4d19ef28-7aea-4991-932d-513f1a89c75f" x="0" y="0" width="330" height="13"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -175,7 +178,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="12" rowSpan="1">
 							<textField isStretchWithOverflow="true">
-								<reportElement x="2" y="0" width="328" height="12" uuid="f30fa492-84e1-42c1-a5e2-9e4b2c80731f"/>
+								<reportElement uuid="f30fa492-84e1-42c1-a5e2-9e4b2c80731f" x="2" y="0" width="328" height="12"/>
 								<textElement>
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -186,7 +189,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 					<jr:column width="90" uuid="5590a01d-4edd-434f-a4fd-fbe282c06f8c">
 						<jr:columnHeader style="table_TD" height="13" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="90" height="13" uuid="b5ba168b-9e92-4513-b2d2-3c6b234e7486"/>
+								<reportElement uuid="b5ba168b-9e92-4513-b2d2-3c6b234e7486" x="0" y="0" width="90" height="13"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -195,7 +198,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="12" rowSpan="1">
 							<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-								<reportElement x="0" y="0" width="90" height="12" uuid="86120045-22fe-4173-ac6f-3aacc4b9733a"/>
+								<reportElement uuid="86120045-22fe-4173-ac6f-3aacc4b9733a" x="0" y="0" width="90" height="12"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -210,7 +213,7 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 	<detail>
 		<band height="153" splitType="Stretch">
 			<textField>
-				<reportElement x="21" y="4" width="517" height="91" uuid="b59885f3-ae7e-4b4c-98d4-81067c913a93"/>
+				<reportElement uuid="b59885f3-ae7e-4b4c-98d4-81067c913a93" x="21" y="4" width="517" height="91"/>
 				<textElement markup="none">
 					<font fontName="Arial" size="8"/>
 					<paragraph lineSpacing="1_1_2"/>
@@ -221,14 +224,14 @@ WHERE obs.CODIGO_ENTIDAD = $P{pCodigo} AND
 "___________________________________________________________________________________________________________________"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="21" y="97" width="517" height="20" uuid="511f2104-001e-43c7-b35d-b3a274ce4181"/>
+				<reportElement uuid="511f2104-001e-43c7-b35d-b3a274ce4181" x="21" y="97" width="517" height="20"/>
 				<textElement>
 					<font fontName="Arial" size="8" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Por este medio hago constar que verifiqué la documentación administrativa del Programa Dotación de Paquetes Escolares, la cual fue revisada de acuerdo a Normativas y Lineamientos emimitidos por el MINEDUCYT, de lo cual doy fe.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="21" y="118" width="517" height="34" uuid="2ea34103-350f-4f1a-b27b-e83a0bed6fba"/>
+				<reportElement uuid="2ea34103-350f-4f1a-b27b-e83a0bed6fba" x="21" y="118" width="517" height="34"/>
 				<textElement markup="none">
 					<font fontName="Arial" size="8" isBold="false"/>
 					<paragraph lineSpacing="Double"/>
