--- a/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionUni.jrxml
+++ b/paquescolar-rpt/src/main/java/sv/gob/mined/apps/reportes/cotizacion/rptCotizacionUni.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="544" leftMargin="34" rightMargin="34" topMargin="34" bottomMargin="34" uuid="b27e4f15-9037-46d9-9545-c4b15ac4f31b">
-	<property name="ireport.zoom" value="1.610510000000001"/>
+	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="844"/>
+	<property name="ireport.y" value="0"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -76,7 +76,7 @@
 	<group name="reporte">
 		<groupExpression><![CDATA[]]></groupExpression>
 		<groupHeader>
-			<band height="256" splitType="Stretch">
+			<band height="243" splitType="Stretch">
 				<staticText>
 					<reportElement uuid="57ab9f12-33c5-453e-8ed0-21ccdd0be21f" x="50" y="16" width="424" height="41"/>
 					<textElement textAlignment="Center">
@@ -86,7 +86,7 @@
  (CONFECCIÓN DE UNIFORME)]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement uuid="d3dbc340-3579-4ff6-abcf-f5bf85baff9e" key="textField-8" x="0" y="71" width="544" height="185"/>
+					<reportElement uuid="d3dbc340-3579-4ff6-abcf-f5bf85baff9e" key="textField-8" x="0" y="71" width="544" height="170"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -187,6 +187,7 @@
 	</columnHeader>
 	<detail>
 		<band height="150" splitType="Stretch">
+			<printWhenExpression><![CDATA[$V{PAGE_COUNT}==2]]></printWhenExpression>
 			<componentElement>
 				<reportElement uuid="5fdc10f5-3345-44dc-9b6c-3379d5ffaab0" key="table" style="table 2_TD" x="0" y="108" width="534" height="42"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
